--- a/index.html
+++ b/index.html
@@ -276,10 +276,10 @@
                   <div class="swiper-slide col-sm-4">
                      <img src="img/ss2.png" alt="">
                   </div>
-                  <!-- End single ScreenShot -->
-                  <div class="swiper-slide col-sm-4">
+                  <!-- End single ScreenShot-->
+                  <!--<div class="swiper-slide col-sm-4">
                      <img src="img/ss3.png" alt="">
-                  </div>
+                  </div>-->
                   <!-- End single ScreenShot -->
                   <div class="swiper-slide col-sm-4">
                      <img src="img/ss4.png" alt="">
@@ -326,56 +326,6 @@
          </div>
       </section>
       <!-- ==========  Featured 2 End ========== -->
-     
-      <!-- ==========  Contact Start ========== -->
-      <section id="contact" class="p-80px-tb">
-         <div class="container">
-            <div class="row">
-               <div class="col-sm-8 offset-sm-2">
-                  <div class="section-title text-center m-50px-b">
-                     <h2>Get in touch</h2>
-                  </div>
-               </div>
-            </div>
-            <div class="row row-eq-height">
-               </div>
-               <!-- End contact Address -->
-               <div class="form-container">
-                  <div class="col-lg-12 col-md-12 contact-form p-30px">
-                     <h3 class="m-25px-b">Feel Free to Reach Out</h3>
-                     <form id="contact-form" method="post" action="php/sendmail.php">
-                        <div class="message">
-                           <p class="email-loading alert alert-warning"><img src="img/loading.gif" alt="">&nbsp;&nbsp;&nbsp;Sending...  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                 <span aria-hidden="true">&times;</span></button>
-                           </p>
-                           <p class="email-success alert alert-success"><i class="icon icon-icon-check-alt2"></i> Your quote has successfully been sent.  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                              <span aria-hidden="true">&times;</span></button>
-                           </p>
-                           <p class="email-failed alert alert-danger"><i class="icon icon-icon-close-alt2"></i> Something went wrong!  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                              <span aria-hidden="true">&times;</span></button>
-                           </p>
-                        </div>
-                        <div class=" mb13">
-                           <input name="name" class="contact-name" id="contact-name" type="text" placeholder="Your Name" required="">
-                        </div>
-                        <div class="mb13">
-                           <input name="email" class="contact-email" id="contact-email" type="email" placeholder="Your Email" required="">
-                        </div>
-                        <div class="mb13">
-                           <input name="subject" class="contact-subject" id="contact-subject" type="text" placeholder="Subject" required="">
-                        </div>
-                        <div class="mb30">
-                           <textarea name="message" class="contact-message" id="contact-message" placeholder="Your Message" required=""></textarea>
-                        </div>
-                        <button class="btn btn-default btn-filled animated-btn">Send Now</button>
-                     </form>
-                  </div>
-               </div>
-               <!-- End Contact Form -->
-            </div>
-         </div>
-      </section>
-      <!-- ==========  Contact End ========== -->
       <!-- ==========  Footer Start ========== -->
       <footer id="footer" class="p-70px-t p-30px-b footer">
          <div class="container">
