--- a/index.html
+++ b/index.html
@@ -1,54 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="robots" content="noindex, nofollow"> <!-- Add this line to prevent indexing and crawling -->
-      <!-- Page Title -->
-      <title>MOOW GAMES Studio</title>
-      <!-- Favicon -->
-      <link rel="icon" href="favicon.ico" />
-      <!---IcoFont Icon font-->
-      <link rel="stylesheet" href="css/icofont.min.css">
-      <!-- Bootsrap CSS -->
-      <link rel="stylesheet" href="css/bootstrap.min.css">
-      <!-- Animate CSS -->
-      <link href="css/animate.min.css" rel="stylesheet">
-      <!-- Swiper CSS -->
-      <link rel="stylesheet" href="css/swiper.min.css">
-      <!-- Theme Style -->
-      <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="css/gredients/purple.css"> <!-- Default color version -->
-      <link rel="stylesheet" href="css/typography/poppins-quciksland.css"> <!-- Default typography version -->
-      <!--  Template gredient BG -->
-      <!-- <link href="css/gredients/black.css" rel="stylesheet"> -->
-      <!-- <link href="css/gredients/blue.css" rel="stylesheet"> -->
-      <!-- <link href="css/gredients/granduer.css" rel="stylesheet"> -->
-      <!-- <link href="css/gredients/purple.css" rel="stylesheet"> -->
-      <!-- <link href="css/gredients/red.css" rel="stylesheet"> -->
-      <!-- <link href="css/gredients/yellow.css" rel="stylesheet"> -->
-      <!--  Template SVG BG -->
-      <!-- <link href="css/svg/circle.css" rel="stylesheet"> -->
-      <!-- <link href="css/svg/circle-2.css" rel="stylesheet"> -->
-      <!-- <link href="css/svg/hexagon.css" rel="stylesheet"> -->
-      <!-- <link href="css/svg/hexagon-2.css" rel="stylesheet"> -->
-      <!-- <link href="css/svg/stripe.css" rel="stylesheet"> -->
-      <!-- <link href="css/svg/stripe-2.css" rel="stylesheet"> -->
-      <!--  Template Flat BG -->
-      <!-- <link href="css/colors/sky.css" rel="stylesheet"> -->
-      <!-- <link href="css/colors/brown.css" rel="stylesheet"> -->
-      <!-- <link href="css/colors/green.css" rel="stylesheet"> -->
-      <!-- <link href="css/colors/orange.css" rel="stylesheet"> -->
-      <!-- <link href="css/colors/pink.css" rel="stylesheet"> -->
-      <!-- <link href="css/colors/olive.css" rel="stylesheet"> -->
-      <!--  Template Typography -->
-      <!-- <link href="css/typography/josefin-ptserif.css" rel="stylesheet"> -->
-      <!-- <link href="css/typography/montsarat-opensans.css" rel="stylesheet"> -->
-      <!-- <link href="css/typography/poppins-quciksland.css" rel="stylesheet"> -->
-      <!-- <link href="css/typography/ubuntu-sourcesanse.css" rel="stylesheet"> -->
-      <!-- <link href="css/typography/varela-roboto.css" rel="stylesheet"> -->
-   </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="robots" content="noindex, nofollow"> <!-- Add this line to prevent indexing and crawling -->
+    <meta name="description" content="Moow Games Studio" />
+    <meta property="og:site_name" content="Moow Games Studio" />
+    <meta property="og:url" content="https://www.moowgames.com/index.html" />
+    <meta property="og:title" content="Moow Games Studio" />
+    <meta name="author" content="Moow Games Studio" />
+    <meta property="og:type" content="website" />
+    <meta name="keyword" content="Moow Game, Game Studio" />
+    <title>MOOW GAMES Studio</title>
+    <link rel="icon" href="favicon.ico" />
+    <link rel="stylesheet" href="css/icofont.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="css/animate.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/swiper.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/gredients/purple.css"> <!-- Default color version -->
+    <link rel="stylesheet" href="css/typography/poppins-quciksland.css"> <!-- Default typography version -->
+    <!--  Template gredient BG -->
+    <!-- <link href="css/gredients/black.css" rel="stylesheet"> -->
+    <!-- <link href="css/gredients/blue.css" rel="stylesheet"> -->
+    <!-- <link href="css/gredients/granduer.css" rel="stylesheet"> -->
+    <!-- <link href="css/gredients/purple.css" rel="stylesheet"> -->
+    <!-- <link href="css/gredients/red.css" rel="stylesheet"> -->
+    <!-- <link href="css/gredients/yellow.css" rel="stylesheet"> -->
+    <!--  Template SVG BG -->
+    <!-- <link href="css/svg/circle.css" rel="stylesheet"> -->
+    <!-- <link href="css/svg/circle-2.css" rel="stylesheet"> -->
+    <!-- <link href="css/svg/hexagon.css" rel="stylesheet"> -->
+    <!-- <link href="css/svg/hexagon-2.css" rel="stylesheet"> -->
+    <!-- <link href="css/svg/stripe.css" rel="stylesheet"> -->
+    <!-- <link href="css/svg/stripe-2.css" rel="stylesheet"> -->
+    <!--  Template Flat BG -->
+    <!-- <link href="css/colors/sky.css" rel="stylesheet"> -->
+    <!-- <link href="css/colors/brown.css" rel="stylesheet"> -->
+    <!-- <link href="css/colors/green.css" rel="stylesheet"> -->
+    <!-- <link href="css/colors/orange.css" rel="stylesheet"> -->
+    <!-- <link href="css/colors/pink.css" rel="stylesheet"> -->
+    <!-- <link href="css/colors/olive.css" rel="stylesheet"> -->
+    <!--  Template Typography -->
+    <!-- <link href="css/typography/josefin-ptserif.css" rel="stylesheet"> -->
+    <!-- <link href="css/typography/montsarat-opensans.css" rel="stylesheet"> -->
+    <!-- <link href="css/typography/poppins-quciksland.css" rel="stylesheet"> -->
+    <!-- <link href="css/typography/ubuntu-sourcesanse.css" rel="stylesheet"> -->
+    <!-- <link href="css/typography/varela-roboto.css" rel="stylesheet"> -->
+</head>
    <style>
       .hidden {
         display: none;
@@ -341,7 +341,7 @@
                      </div>
                   </div>
                   <div class="footer-copyright p-30px-tb text-center">
-                     <p>Copyright &copy; MOOW Games Studio 2023. All Rights Reserved.</p>
+                     <p>Copyright &copy; MOOW Games Studio 2024. All Rights Reserved.</p>
                   </div>
                </div>
             </div>
