--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
                     <h2>Get Our Games</h2>
                     <p>We have carefully crafted our games, so you can enjoy them on your device. You can easily download our games in related online stores.</p>
                     <div class="apps-buttons">
-                        <a href="https://play.google.com/store/games" class="btn btn-default btn-filled animated-btn" target="_blank"><i class="icofont-brand-android-robot"></i> Available on<br>Google Play Store</a>
-                        <a href="https://apps.apple.com/tr/genre/ios-games/id6014" class="btn btn-default btn-filled animated-btn" target="_blank"><i class="icofont-brand-apple"></i> Available on<br>Apple App Store</a>
+                        <a href="" class="btn btn-default btn-filled animated-btn" target="_self"><i class="icofont-brand-android-robot"></i>Coming Soon<br>Google Play Store</a>
+                        <a href="" class="btn btn-default btn-filled animated-btn" target="_self"><i class="icofont-brand-apple"></i> Coming Soon<br>Apple App Store</a>
 
                     </div>
                 </div>
@@ -327,6 +327,17 @@
         </div>
     </section>
     <!-- ==========  Featured 2 End ========== -->
+    <!-- ==========  Contact Start ========== -->
+    <section id="contact" class="p-80px-tb">
+        <div class="container">
+            <div class="row">
+                <div class="p-30px-tb text-center">
+                   <a href="mailto:webmaster@moowgames.com">webmaster@moowgames.com</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ==========  Contact End ========== -->
     <!-- ==========  Footer Start ========== -->
     <footer id="footer" class="p-70px-t p-30px-b footer">
         <div class="container">
