--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                                 background-color: #642c91;
                             }
                         </style>
-                        <img class="moveUpDown" src="img/preface.png" alt="">
+                        <img class="moveUpDown" src="img/preface_1.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -247,8 +247,8 @@
                 <div class="col-lg-6 col-md-12">
                     <div class="position-relative featured-mockup">
                         <div class="bordered-box"></div>
-                        <img class="phone-1" src="img/iphone-1.png" alt="">
-                        <img class="phone-2" src="img/iphone-2.png" alt="">
+                        <img class="phone-1" src="img/iphone-1_1.png" alt="">
+                        <img class="phone-2" src="img/iphone-2_1.png" alt="">
                     </div>
                 </div>
             </div>
@@ -320,7 +320,7 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="position-relative featured-mockup2">
-                        <img class="phone-1" src="img/6mockup1.png" alt="">
+                        <img class="phone-1" src="img/6mockup1_1.png" alt="">
                     </div>
                 </div>
             </div>
