--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                             <p>Best drive shooting challenge!! Shoot, collect, upgrade. Gather points and modify your dream car!</p>
                                             <p>in markets very soon...</p>
                                         </div>
-                                        <div class="link-box"><a href="https://youtu.be/n0yK87Jykks" target="_blank" class="theme-btn btn-style-one">Watch</a></div>
+                                        <div class="link-box"><a href="https://www.youtube.com/shorts/EXly_E3AVFs" target="_blank" class="theme-btn btn-style-one">Watch</a></div>
                                     </div>
 
                                 </div>
