--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
 
             <div class="other-page-link">
-                <a class="theme-btn" href="#">CONTACT US</a>
+                <a class="theme-btn" href="mailto:webmaster@moowgames.com">CONTACT US</a>
             </div>
 
         </section>
@@ -379,7 +379,7 @@
                 <div class="title-box light text-center margin-bott-20">
                     <h3 class="small-text">KEEP IN TOUCH</h3>
                     <h2>CONTACT US</h2>
-                    <div class="text"><a href="webmaster@moowgames.com">webmaster@moowgames.com</a></div>
+                    <div class="text"><a href="mailto:webmaster@moowgames.com">webmaster@moowgames.com</a></div>
                 </div>
                 <div class="row clearfix">
 
