team hide update

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             </div>
         </section>
 
-        <!--Team Section-->
+        <!-- Team Section
         <section id="team" class="team-section no-padd-bottom">
             <div class="auto-container">
                 <div class="title-box light text-center margin-bott-20">
@@ -341,28 +341,24 @@
                 </div>
                 <div class="row clearfix">
 
-                    <!--Team Column-->
                     <div class="default-team-column col-md-3 col-sm-6 col-xs-12">
                         <div class="inner-box">
                             <figure class="image-box"><img src="images/team/fatih_aydin.png" alt=""></figure>
                         </div>
                     </div>
 
-                    <!--Team Column-->
                     <div class="default-team-column col-md-3 col-sm-6 col-xs-12">
                         <div class="inner-box">
                             <figure class="image-box"><img src="images/team/arif_durgec.png" alt=""></figure>
                         </div>
                     </div>
 
-                    <!--Team Column-->
                     <div class="default-team-column col-md-3 col-sm-6 col-xs-12">
                         <div class="inner-box">
                             <figure class="image-box"><img src="images/team/mahdi_sabamehr_2.png" alt=""></figure>
                         </div>
                     </div>
 
-                    <!--Team Column-->
                     <div class="default-team-column col-md-3 col-sm-6 col-xs-12">
                         <div class="inner-box">
                             <figure class="image-box"><img src="images/team/hakan_silek.png" alt=""></figure>
@@ -372,7 +368,7 @@
 
                 </div>
             </div>
-        </section>
+        </section> -->
 
 
         <!--Default Blog Section-->
@@ -428,6 +424,7 @@
                         </div>
                     </div>
 
+                     <!--
                     <div class="default-team-column col-md-6 col-sm-6 col-xs-12">
                         <div class="inner-box">
                             <figure class="image-box"><img src="images/team/empty_badge_0.png" alt=""></figure>
@@ -437,6 +434,7 @@
                             </div>
                         </div>
                     </div>
+                -->
 
                 </div>
             </div>
