--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <li><a href="#games">Games</a></li>
                                 <li><a href="#philosophy">Philosophy</a></li>
                                 <li><a href="#vision">Vision</a></li>
-                                <li><a href="#team">Team</a></li>
+                                <!-- <li><a href="#team">Team</a></li>-->
                                 <li><a href="#contact">Contact</a></li>
                             </ul>
                         </div>
@@ -443,14 +443,17 @@
         <!--Team Section-->
         <section id="contact" class="team-section no-padd-bottom">
             <div class="auto-container">
-                <div class="title-box light text-center margin-bott-20">
+                <div class="title-box light text-center"> <!-- margin-bott-20 -->
                     <h3 class="small-text">KEEP IN TOUCH</h3>
                     <h2>CONTACT US</h2>
+                    <h3 style="font-size: larger; color: #000;">ARİF DURGEÇ</h3>
+                    <h3 class="small-text">KÜÇÜKBAKKALKÖY MAH. SELVİLİ SK. NO:4/20 ATAŞEHİR / İSTANBUL</h3>
                     <div class="text"><a href="mailto:webmaster@moowgames.com">webmaster@moowgames.com</a></div>
                 </div>
+                
                 <div class="row clearfix">
 
-                    <div class="default-team-column col-md-6 col-sm-6 col-xs-12">
+                    <!-- <div class="default-team-column col-md-6 col-sm-6 col-xs-12">
                         <div class="inner-box">
                             <figure class="image-box"><img src="images/team/empty_badge_0.png" alt=""></figure>
                             <div class="content-box">
@@ -458,7 +461,7 @@
                                 <h3>İSTANBUL, TÜRKİYE</h3>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                      <!--
                     <div class="default-team-column col-md-6 col-sm-6 col-xs-12">
@@ -475,8 +478,6 @@
                 </div>
             </div>
         </section>
-
-
 
         <section class="our-work-section">
             <div class="auto-container">
@@ -556,7 +557,7 @@
             <!--Footer Bottom-->
             <div class="footer-bottom">
                 <div class="auto-container">
-                    <div class="text"><span class="theme_color">MooW Games Studio</span> &copy; 2024 All Right Reserved</div>
+                    <div class="text"><span class="theme_color">MooW Games Studio</span> &copy; 2025 All Right Reserved</div>
                 </div>
             </div>
 
