--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                                         </div>
                                                         <div class="content-box">
                                                             <div class="text">
-                                                                <p>Unleash Your Inner Puzzle Master! Pair Vibrant Screw and Bolts for a Satisfying Color-Matching Experience!.</p>
+                                                                <p>Welcome to Cubetris: The 3D Puzzle Revolution! - Step into the world of Cubetris - where classic block-stacking meets a bold 3D twist! Challenge your spatial skills as you drop and fit unique cube shapes into dynamic grids of various sizes.</p>
                                                             </div>
                                                         </div>
                                                         <div class="link-box">
@@ -172,7 +172,7 @@
                                                         </div>
                                                         <div class="content-box">
                                                             <div class="text">
-                                                                <p>Welcome to Cubetris: The 3D Puzzle Revolution! - Step into the world of Cubetris - where classic block-stacking meets a bold 3D twist! Challenge your spatial skills as you drop and fit unique cube shapes into dynamic grids of various sizes.</p>
+                                                                <p>Welcome to Color Hexa Puzzle: A Vibrant Hex-Matching Challenge! Get ready for a mesmerizing puzzle adventure! Color Hexa Puzzle invites you into a world of colorful hexagons, where strategy and pattern recognition will lead you to victory.</p>
                                                             </div>
                                                             <div class="link-box">
                                                                 <a href="https://apps.apple.com/us/app/color-hexa-puzzle/id6740743141" target="_blank" class="theme-btn btn-style-one">App Store</a>
