--- a/games_viewer.html
+++ b/games_viewer.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Games Viewer</title>
+  <meta name="robots" content="noindex, nofollow">
   <style>
     body {
       font-family: sans-serif;
@@ -22,21 +23,33 @@
     th {
       background: #eee;
     }
-    input {
-      margin: 5px 10px 20px 0;
-      padding: 5px;
-      font-size: 14px;
+    select[multiple] {
+      width: 100%;
+      height: 100px;
+      margin-bottom: 10px;
+    }
+    h2 {
+      margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
   <h2>Games CSV Viewer</h2>
 
-  <input type="text" id="filterStudio" placeholder="Filter by Studio Name">
-  <input type="text" id="filterPlatform" placeholder="Filter by Platform">
-  <input type="text" id="filterGame" placeholder="Filter by Game Name">
-  <input type="text" id="filterGenre" placeholder="Filter by Genre">
-  <input type="text" id="filterDate" placeholder="Filter by Detect Date (yy/mm/dd)">
+  <label>Studio Name</label>
+  <select id="filterStudio" multiple></select>
+
+  <label>Platform</label>
+  <select id="filterPlatform" multiple></select>
+
+  <label>Game Name</label>
+  <select id="filterGame" multiple></select>
+
+  <label>Genre</label>
+  <select id="filterGenre" multiple></select>
+
+  <label>Detect Date</label>
+  <select id="filterDate" multiple></select>
 
   <table id="gamesTable">
     <thead>
@@ -53,53 +66,69 @@
   </table>
 
   <script>
-    async function loadCSV() {
-      const response = await fetch('games.csv');
-      const text = await response.text();
-      const rows = text.trim().split('\n').slice(1); // Skip header
-      const tbody = document.querySelector('#gamesTable tbody');
+    const filters = {
+      filterStudio: new Set(),
+      filterPlatform: new Set(),
+      filterGame: new Set(),
+      filterGenre: new Set(),
+      filterDate: new Set()
+    };
 
-      for (const row of rows) {
-        const cols = row.split(',');
-        const tr = document.createElement('tr');
-        cols.forEach(col => {
-          const td = document.createElement('td');
-          td.textContent = col.trim();
-          tr.appendChild(td);
-        });
-        tbody.appendChild(tr);
-      }
+    async function loadCSV() {
+      const response = await fetch('games.csv?cache=' + new Date().getTime());
+      const text = await response.text();
+      const rows = text.trim().split('\n').slice(1);
+      const data = rows.map(row => row.split(',').map(cell => cell.trim()));
+      populateFilters(data);
+      renderTable(data);
     }
 
-    function setupFilters() {
-      const filters = {
-        studio: document.getElementById('filterStudio'),
-        platform: document.getElementById('filterPlatform'),
-        game: document.getElementById('filterGame'),
-        genre: document.getElementById('filterGenre'),
-        date: document.getElementById('filterDate')
-      };
+    function populateFilters(data) {
+      const columns = [0, 1, 2, 3, 4]; // columns to populate filters for
+      const ids = ["filterStudio", "filterPlatform", "filterDate", "filterGame", "filterGenre"];
 
-      Object.values(filters).forEach(input => {
-        input.addEventListener('input', () => {
-          const rows = document.querySelectorAll('#gamesTable tbody tr');
-          rows.forEach(row => {
-            const cells = Array.from(row.children).map(td => td.textContent.toLowerCase());
-            const [studio, platform, detectDate, game, genre] = cells;
-            const show =
-              studio.includes(filters.studio.value.toLowerCase()) &&
-              platform.includes(filters.platform.value.toLowerCase()) &&
-              game.includes(filters.game.value.toLowerCase()) &&
-              genre.includes(filters.genre.value.toLowerCase()) &&
-              detectDate.includes(filters.date.value.toLowerCase());
-            row.style.display = show ? '' : 'none';
-          });
+      columns.forEach((colIdx, i) => {
+        const uniqueValues = [...new Set(data.map(row => row[colIdx]))].sort();
+        const select = document.getElementById(ids[i]);
+        select.innerHTML = ""; // clear existing options
+        uniqueValues.forEach(value => {
+          const option = document.createElement("option");
+          option.value = value;
+          option.textContent = value;
+          select.appendChild(option);
+        });
+        select.addEventListener('change', () => {
+          filters[ids[i]] = new Set([...select.selectedOptions].map(o => o.value));
+          renderTable(data);
         });
       });
     }
 
+    function renderTable(data) {
+      const tbody = document.querySelector('#gamesTable tbody');
+      tbody.innerHTML = "";
+
+      data.forEach(row => {
+        const show = 
+          (filters.filterStudio.size === 0 || filters.filterStudio.has(row[0])) &&
+          (filters.filterPlatform.size === 0 || filters.filterPlatform.has(row[1])) &&
+          (filters.filterDate.size === 0 || filters.filterDate.has(row[2])) &&
+          (filters.filterGame.size === 0 || filters.filterGame.has(row[3])) &&
+          (filters.filterGenre.size === 0 || filters.filterGenre.has(row[4]));
+
+        if (show) {
+          const tr = document.createElement('tr');
+          row.forEach(cell => {
+            const td = document.createElement('td');
+            td.textContent = cell;
+            tr.appendChild(td);
+          });
+          tbody.appendChild(tr);
+        }
+      });
+    }
+
     loadCSV();
-    setupFilters();
   </script>
 </body>
 </html>
