--- a/games_viewer.html
+++ b/games_viewer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Games Viewer</title>
-  <meta name="robots" content="noindex, nofollow">
+  <meta name="robots" content="noindex, nofollow" />
   <style>
     body {
       font-family: sans-serif;
@@ -23,110 +23,159 @@
     th {
       background: #eee;
     }
-    select[multiple] {
+    select {
       width: 100%;
-      height: 100px;
-      margin-bottom: 10px;
+      font-size: 12px;
+      margin-top: 5px;
     }
-    h2 {
-      margin-bottom: 10px;
+    input {
+      margin: 5px 10px 20px 0;
+      padding: 5px;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
   <h2>Games CSV Viewer</h2>
 
-  <label>Studio Name</label>
-  <select id="filterStudio" multiple></select>
-
-  <label>Platform</label>
-  <select id="filterPlatform" multiple></select>
-
-  <label>Game Name</label>
-  <select id="filterGame" multiple></select>
-
-  <label>Genre</label>
-  <select id="filterGenre" multiple></select>
-
-  <label>Detect Date</label>
-  <select id="filterDate" multiple></select>
+  <input type="text" id="filterStudio" placeholder="Filter by Studio Name">
+  <input type="text" id="filterPlatform" placeholder="Filter by Platform">
+  <input type="text" id="filterGame" placeholder="Filter by Game Name">
+  <input type="text" id="filterGenre" placeholder="Filter by Genre">
+  <input type="text" id="filterDate" placeholder="Filter by Detect Date (yy/mm/dd)">
 
   <table id="gamesTable">
     <thead>
       <tr>
-        <th>Studio Name</th>
-        <th>Platform</th>
-        <th>Detect Date</th>
-        <th>Game Name</th>
-        <th>Genre</th>
-        <th>Last Check Time</th>
+        <th>
+          Studio Name
+          <select id="selectStudio" multiple></select>
+        </th>
+        <th>
+          Platform
+          <select id="selectPlatform" multiple></select>
+        </th>
+        <th>
+          Detect Date
+          <select id="selectDate" multiple></select>
+        </th>
+        <th>
+          Game Name
+          <select id="selectGame" multiple></select>
+        </th>
+        <th>
+          Genre
+          <select id="selectGenre" multiple></select>
+        </th>
+        <th>
+          Last Check Time
+        </th>
       </tr>
     </thead>
     <tbody></tbody>
   </table>
 
   <script>
-    const filters = {
-      filterStudio: new Set(),
-      filterPlatform: new Set(),
-      filterGame: new Set(),
-      filterGenre: new Set(),
-      filterDate: new Set()
-    };
+    const csvUrl = 'games.csv';
+    let tableData = [];
 
     async function loadCSV() {
-      const response = await fetch('games.csv?cache=' + new Date().getTime());
+      const response = await fetch(csvUrl + '?t=' + new Date().getTime()); // cache bypass
       const text = await response.text();
       const rows = text.trim().split('\n').slice(1);
-      const data = rows.map(row => row.split(',').map(cell => cell.trim()));
-      populateFilters(data);
-      renderTable(data);
+      const tbody = document.querySelector('#gamesTable tbody');
+      tbody.innerHTML = '';
+      tableData = [];
+
+      for (const row of rows) {
+        const cols = row.split(',');
+        const tr = document.createElement('tr');
+        cols.forEach(col => {
+          const td = document.createElement('td');
+          td.textContent = col.trim();
+          tr.appendChild(td);
+        });
+        tbody.appendChild(tr);
+        tableData.push(cols.map(col => col.trim()));
+      }
+
+      populateSelectFilters();
+      applyFilters();
     }
 
-    function populateFilters(data) {
-      const columns = [0, 1, 2, 3, 4]; // columns to populate filters for
-      const ids = ["filterStudio", "filterPlatform", "filterDate", "filterGame", "filterGenre"];
+    function populateSelectFilters() {
+      const selects = {
+        Studio: document.getElementById('selectStudio'),
+        Platform: document.getElementById('selectPlatform'),
+        Date: document.getElementById('selectDate'),
+        Game: document.getElementById('selectGame'),
+        Genre: document.getElementById('selectGenre'),
+      };
 
-      columns.forEach((colIdx, i) => {
-        const uniqueValues = [...new Set(data.map(row => row[colIdx]))].sort();
-        const select = document.getElementById(ids[i]);
-        select.innerHTML = ""; // clear existing options
-        uniqueValues.forEach(value => {
-          const option = document.createElement("option");
+      const indices = {
+        Studio: 0,
+        Platform: 1,
+        Date: 2,
+        Game: 3,
+        Genre: 4
+      };
+
+      Object.entries(selects).forEach(([key, select]) => {
+        const idx = indices[key];
+        const unique = [...new Set(tableData.map(row => row[idx]))].sort();
+        select.innerHTML = '';
+        unique.forEach(value => {
+          const option = document.createElement('option');
           option.value = value;
           option.textContent = value;
           select.appendChild(option);
         });
-        select.addEventListener('change', () => {
-          filters[ids[i]] = new Set([...select.selectedOptions].map(o => o.value));
-          renderTable(data);
-        });
       });
     }
 
-    function renderTable(data) {
-      const tbody = document.querySelector('#gamesTable tbody');
-      tbody.innerHTML = "";
+    function applyFilters() {
+      const selects = {
+        Studio: [...document.getElementById('selectStudio').selectedOptions].map(o => o.value),
+        Platform: [...document.getElementById('selectPlatform').selectedOptions].map(o => o.value),
+        Date: [...document.getElementById('selectDate').selectedOptions].map(o => o.value),
+        Game: [...document.getElementById('selectGame').selectedOptions].map(o => o.value),
+        Genre: [...document.getElementById('selectGenre').selectedOptions].map(o => o.value),
+      };
 
-      data.forEach(row => {
-        const show = 
-          (filters.filterStudio.size === 0 || filters.filterStudio.has(row[0])) &&
-          (filters.filterPlatform.size === 0 || filters.filterPlatform.has(row[1])) &&
-          (filters.filterDate.size === 0 || filters.filterDate.has(row[2])) &&
-          (filters.filterGame.size === 0 || filters.filterGame.has(row[3])) &&
-          (filters.filterGenre.size === 0 || filters.filterGenre.has(row[4]));
+      const textFilters = {
+        Studio: document.getElementById('filterStudio').value.toLowerCase(),
+        Platform: document.getElementById('filterPlatform').value.toLowerCase(),
+        Game: document.getElementById('filterGame').value.toLowerCase(),
+        Genre: document.getElementById('filterGenre').value.toLowerCase(),
+        Date: document.getElementById('filterDate').value.toLowerCase()
+      };
 
-        if (show) {
-          const tr = document.createElement('tr');
-          row.forEach(cell => {
-            const td = document.createElement('td');
-            td.textContent = cell;
-            tr.appendChild(td);
-          });
-          tbody.appendChild(tr);
-        }
+      const rows = document.querySelectorAll('#gamesTable tbody tr');
+      rows.forEach(row => {
+        const cells = Array.from(row.children).map(td => td.textContent);
+        const matches = (
+          (selects.Studio.length === 0 || selects.Studio.includes(cells[0])) &&
+          (selects.Platform.length === 0 || selects.Platform.includes(cells[1])) &&
+          (selects.Date.length === 0 || selects.Date.includes(cells[2])) &&
+          (selects.Game.length === 0 || selects.Game.includes(cells[3])) &&
+          (selects.Genre.length === 0 || selects.Genre.includes(cells[4])) &&
+          cells[0].toLowerCase().includes(textFilters.Studio) &&
+          cells[1].toLowerCase().includes(textFilters.Platform) &&
+          cells[2].toLowerCase().includes(textFilters.Date) &&
+          cells[3].toLowerCase().includes(textFilters.Game) &&
+          cells[4].toLowerCase().includes(textFilters.Genre)
+        );
+        row.style.display = matches ? '' : 'none';
       });
     }
+
+    document.querySelectorAll('select').forEach(select => {
+      select.addEventListener('change', applyFilters);
+    });
+
+    document.querySelectorAll('input').forEach(input => {
+      input.addEventListener('input', applyFilters);
+    });
 
     loadCSV();
   </script>
