--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Moow Games Studio</title>
-    <meta name="description" content="Moow Games Studio" />
-    <meta property="og:site_name" content="Moow Games Studio" />
-    <meta property="og:url" content="https://www.moowgames.com/index.html" />
-    <meta property="og:title" content="Moow Games Studio" />
-    <meta name="author" content="Moow Games Studio" />
-    <meta property="og:type" content="website" />
-    <meta name="keyword" content="Moow Game, Game Studio" />
+  <title>Moow Games Studio</title>
+  <meta name="description" content="Moow Games Studio" />
+  <meta name="author" content="Moow Games Studio" />
+  <meta name="keyword" content="Moow Game, Game Studio" />
+
+  <meta property="og:site_name" content="Moow Games Studio" />
+  <meta property="og:url" content="https://www.moowgames.com/" />
+  <meta property="og:title" content="Moow Games Studio" />
+  <meta property="og:description" content="Moow Games" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://www.moowgames.com/images/main-slider/moow_slide_logo.png" />
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
