--- a/privacy/index.html
+++ b/privacy/index.html
@@ -1,13 +1,102 @@
+
 <!DOCTYPE html>
-<html>
-<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width'>
-	<title>Privacy Policy</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Moow Games - Terms of Service & Privacy Policy</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --bg: #f9fafb;
+      --text: #1e293b;
+      --subtext: #475569;
+      --card-bg: #ffffff;
+      --border: #e2e8f0;
+      --link: #2563eb;
+      --shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+      --radius: 14px;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      line-height: 1.7;
+      padding: 0;
+    }
+
+    main {
+      max-width: 900px;
+      background: var(--card-bg);
+      margin: 3rem auto;
+      padding: 2.5rem;
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+    }
+
+    h1, h2 {
+      color: var(--text);
+    }
+
+    h1 {
+      text-align: center;
+      margin-top: 0;
+      font-size: 2rem;
+      font-weight: 600;
+    }
+
+    p, li, span {
+      color: var(--subtext);
+      font-size: 1rem;
+    }
+
+    a {
+      color: var(--link);
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    ul {
+      margin-left: 1.5rem;
+    }
+
+    footer {
+      text-align: center;
+      font-size: 0.9rem;
+      color: var(--subtext);
+      padding: 2rem;
+    }
+
+    @media (max-width: 768px) {
+      main {
+        margin: 1rem;
+        padding: 1.5rem;
+      }
+      h1 {
+        font-size: 1.5rem;
+      }
+    }
+
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --bg: #0f172a;
+        --card-bg: #1e293b;
+        --text: #f1f5f9;
+        --subtext: #cbd5e1;
+        --border: #334155;
+        --link: #60a5fa;
+      }
+    }
+  </style>
 </head>
 <body>
+  <main>
+
 	<p style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;line-height:normal;font-size:16px;font-family:"Aptos",sans-serif;'><span style='font-size:30px;font-family:"Times New Roman",serif;'>Terms of Service &amp; Privacy Policy</span></p>
 	<p style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;line-height:normal;font-size:16px;font-family:"Aptos",sans-serif;'><span style='font-family:"Times New Roman",serif;'>Moow Games (&quot;Moow&quot; or &quot;we,&quot; &quot;us,&quot; &quot;our&quot;) is a technology company that designs and develops mobile games. With this Privacy Policy, we aim to explain how and why we gather, store, share, and use your personal data in a manner consistent with the laws of the countries where we do business.&nbsp;</span></p>
 	<p style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;line-height:normal;font-size:16px;font-family:"Aptos",sans-serif;'><span style='font-family:"Times New Roman",serif;'>This Privacy Policy applies to websites, mobile applications, our marketing and advertising activities on all platforms, and other services that we may provide to you from time to time (collectively, the &quot;Services&quot;).&nbsp;</span></p>
@@ -101,5 +190,10 @@
 	<p style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;line-height:normal;font-size:16px;font-family:"Aptos",sans-serif;'><span style='font-size:20px;font-family:"Times New Roman",serif;'>Contact Us</span></p>
 	<p style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;line-height:normal;font-size:16px;font-family:"Aptos",sans-serif;'><span style='font-family:"Times New Roman",serif;'>If you have any questions about this Privacy Policy, would you like to learn more about why, how, and what Personal Data we use, or to request deleting it, please contact us at&nbsp;</span><a href="mailto:webmaster@moowgames.com"><span style='font-family:"Times New Roman",serif;'>webmaster@moowgames.com</span></a></p>
 	<p style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;line-height:115%;font-size:16px;font-family:"Aptos",sans-serif;'>&nbsp;</p>
+
+  </main>
+  <footer>
+    © 2025 Moow Games. All rights reserved.
+  </footer>
 </body>
 </html>
