--- a/index_old_2026.html
+++ b/index_old_2026.html
@@ -586,6 +586,14 @@
                             <figure class="image-box"><img src="images/team/mahdi_sabamehr_2.png" alt=""></figure>
                         </div>
                     </div>
+
+                    <div class="default-team-column col-md-3 col-sm-6 col-xs-12">
+                        <div class="inner-box">
+                            <figure class="image-box"><img src="images/team/hakan_silek.png" alt=""></figure>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
         </section> -->
